--- a/index.html
+++ b/index.html
@@ -2,324 +2,262 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Will You Be Mine? ❤️</title>
+  <title>Will You Be My Girlfriend? ❤️</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Segoe+UI&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom, #8e2de2, #4a00e0);
+      background: linear-gradient(135deg, #f8bbd0, #f48fb1);
       color: white;
       text-align: center;
       height: 100vh;
-      overflow-x: hidden;
-      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       padding: 20px;
-      overflow-y: auto;
+      overflow: hidden;
+      position: relative;
     }
 
-    /* Animated Hearts Background */
+    /* Floating hearts animation */
     .hearts {
-      font-size: 90px;
+      position: absolute;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 80px;
       animation: float 6s infinite ease-in-out, glow 1.5s infinite alternate;
-      margin: 20px 0;
       text-shadow: 0 0 20px rgba(255, 105, 180, 0.8);
-      position: relative;
-      z-index: 5;
-    }
-    @keyframes float {
-      0% { opacity: 0; transform: translateY(100px); }
-      50% { opacity: 1; transform: translateY(0); }
-      100% { opacity: 0; transform: translateY(-100px); }
-    }
-    @keyframes glow {
-      from { text-shadow: 0 0 10px #ff69b4, 0 0 20px #ff69b4; }
-      to { text-shadow: 0 0 20px #ff1493, 0 0 30px #ff1493; }
-    }
-
-    h1, h2 {
-      margin: 10px;
-      text-shadow: 0 0 5px black;
-    }
-
-    .button {
-      background-color: #ff4081;
-      border: none;
-      padding: 20px 50px;
-      font-size: 32px;
-      border-radius: 60px;
-      color: white;
-      cursor: pointer;
-      margin: 20px 10px;
-      box-shadow: 0 8px 30px rgba(255, 64, 129, 0.6);
-      transition: transform 0.3s ease;
-      position: relative;
+      pointer-events: none;
+      user-select: none;
       z-index: 10;
     }
-    .button:hover {
+
+    @keyframes float {
+      0% { opacity: 0; transform: translate(-50%, 100px) scale(0.8); }
+      50% { opacity: 1; transform: translate(-50%, 0) scale(1); }
+      100% { opacity: 0; transform: translate(-50%, -100px) scale(0.8); }
+    }
+
+    @keyframes glow {
+      from {
+        text-shadow: 0 0 10px #ff69b4, 0 0 20px #ff69b4;
+      }
+      to {
+        text-shadow: 0 0 20px #ff1493, 0 0 30px #ff1493;
+      }
+    }
+
+    h1 {
+      font-family: 'Pacifico', cursive;
+      font-size: 3.5rem;
+      margin-bottom: 10px;
+      text-shadow: 0 0 10px #f48fb1;
+    }
+
+    .subtitle {
+      font-size: 1.8rem;
+      margin-bottom: 20px;
+      font-weight: 600;
+      letter-spacing: 1.2px;
+      text-shadow: 0 0 8px #f48fb1;
+    }
+
+    .buttons {
+      margin-top: 20px;
+      display: flex;
+      gap: 50px;
+      z-index: 5;
+    }
+
+    button {
+      font-size: 2rem;
+      padding: 15px 50px;
+      border: none;
+      border-radius: 50px;
+      cursor: pointer;
+      color: white;
+      box-shadow: 0 5px 15px rgba(255, 105, 180, 0.6);
+      transition: transform 0.3s ease;
+    }
+
+    button:hover {
       transform: scale(1.1);
     }
 
-    #loveLetterPopup {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: rgba(255, 255, 255, 0.95);
-      color: black;
-      padding: 30px;
-      border-radius: 20px;
-      width: 90%;
-      max-width: 520px;
-      box-shadow: 0 0 20px pink;
-      display: none;
-      z-index: 1000;
+    #yesBtn {
+      background-color: #ff4081;
     }
 
-    #countdown {
-      font-size: 28px;
-      margin: 30px 0;
-      text-shadow: 0 0 5px black;
-      position: relative;
+    #noBtn {
+      background-color: #757575;
+    }
+
+    /* Sad message style */
+    #sadMessage {
+      font-size: 2rem;
+      margin-top: 30px;
+      display: none;
+      color: #ffcdd2;
+      font-weight: bold;
       z-index: 5;
     }
 
-    form {
-      background: rgba(255, 255, 255, 0.95);
-      color: black;
-      padding: 20px;
-      border-radius: 20px;
-      width: 90%;
-      max-width: 520px;
-      margin: 20px auto;
-      position: relative;
-      z-index: 5;
-    }
-
-    input, textarea {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 10px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-      resize: vertical;
-    }
-
-    audio {
-      display: none;
-    }
-
-    /* Animated Falling Roses */
-    .rose {
-      position: fixed;
-      top: -50px;
-      width: 40px;
-      height: 40px;
-      background: url('https://i.imgur.com/7H6slwH.png') no-repeat center center/contain;
-      pointer-events: none;
-      animation-name: fall, sway;
-      animation-timing-function: linear, ease-in-out;
-      animation-iteration-count: infinite, infinite;
-    }
-    @keyframes fall {
-      0% { top: -50px; opacity: 1; }
-      100% { top: 110vh; opacity: 0; }
-    }
-    @keyframes sway {
-      0%, 100% { transform: translateX(0); }
-      50% { transform: translateX(30px); }
-    }
-
-    /* Fireworks container */
+    /* Fireworks canvas */
     #fireworks {
       pointer-events: none;
       position: fixed;
       top: 0; left: 0; width: 100%; height: 100%;
       z-index: 9999;
       display: none;
-      background: transparent;
     }
 
-    /* Sad message */
-    #sadMessage {
-      display: none;
-      margin-top: 20px;
-      font-size: 28px;
-      font-weight: bold;
-      color: #ff4c4c;
-      text-shadow: 0 0 10px black;
+    /* Memory slideshow container */
+    #slideshow {
+      margin-top: 40px;
+      width: 90vw;
+      max-width: 600px;
+      height: 300px;
+      border-radius: 20px;
+      box-shadow: 0 8px 20px rgba(255, 105, 180, 0.7);
+      overflow: hidden;
       position: relative;
+      background: #fff0f7;
       z-index: 5;
     }
 
-    /* Yes/No Buttons container */
-    #proposalButtons {
-      margin-top: 20px;
-      display: flex;
-      justify-content: center;
-      gap: 40px;
-      position: relative;
-      z-index: 10;
+    #slideshow img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      position: absolute;
+      top: 0;
+      left: 0;
+      opacity: 0;
+      transition: opacity 1s ease;
+      border-radius: 20px;
+      user-select: none;
     }
 
+    #slideshow img.active {
+      opacity: 1;
+      position: relative;
+    }
+
+    /* Animated roses floating */
+    .rose {
+      position: fixed;
+      bottom: -100px;
+      width: 50px;
+      height: 50px;
+      background-image: url('https://i.imgur.com/G4a8zUO.png'); /* rose image */
+      background-size: contain;
+      background-repeat: no-repeat;
+      animation: floatRose 8s linear infinite;
+      opacity: 0.9;
+      pointer-events: none;
+      user-select: none;
+      z-index: 8;
+    }
+
+    @keyframes floatRose {
+      0% {
+        transform: translateY(0) translateX(0) rotate(0deg);
+        opacity: 0.9;
+      }
+      50% {
+        transform: translateY(-300px) translateX(50px) rotate(20deg);
+        opacity: 0.6;
+      }
+      100% {
+        transform: translateY(-600px) translateX(0) rotate(0deg);
+        opacity: 0;
+      }
+    }
   </style>
 </head>
 <body>
 
   <div class="hearts">💖 💕 💘 💝 💓</div>
 
-  <h1>From Best Friends to Something More...</h1>
-  <h2>💌 Will You Be Mine? 💌</h2>
+  <h1>Will You Be My Girlfriend? 💖</h1>
+  <div class="subtitle">Your smile is the prettiest thing in the world!</div>
 
-  <button class="button" onclick="showLoveLetter()">Read My Heart 💞</button>
-  <div id="countdown"></div>
-
-  <form id="replyForm" onsubmit="return submitForm()">
-    <h2>💬 Reply Back To Me</h2>
-    <input type="text" name="name" placeholder="Your Name" required />
-    <textarea name="message" rows="4" placeholder="Your Message..." required></textarea>
-    <button type="submit" class="button">Send 💌</button>
-    <p id="responseMessage" style="color:green;"></p>
-  </form>
-
-  <div id="loveLetterPopup">
-    <p style="font-size: 20px; line-height: 1.4;">
-      From being best friends to maybe something more…<br />
-      I want to call you mine, today and always.<br />
-      <strong>Will you be my girlfriend?</strong> 💖
-    </p>
-
-    <div id="proposalButtons">
-      <button class="button" style="background:#28a745;" onclick="proposalAnswer(true)">Yes 💖</button>
-      <button class="button" style="background:#dc3545;" onclick="proposalAnswer(false)">No 💔</button>
-    </div>
-
-    <button class="button" style="margin-top:20px; background:#777;" onclick="hideLoveLetter()">Close</button>
+  <div class="buttons">
+    <button id="yesBtn">Yes 💕</button>
+    <button id="noBtn">No 😢</button>
   </div>
 
-  <div id="sadMessage">😢 I understand. I’ll always cherish our friendship.</div>
+  <div id="sadMessage">Oh no... Maybe next time! 💔</div>
 
-  <audio id="bgMusic" autoplay loop>
+  <canvas id="fireworks"></canvas>
+
+  <div id="slideshow">
+    <img src="https://i.imgur.com/5bQp4Uf.jpg" class="active" alt="Memory 1" />
+    <img src="https://i.imgur.com/JPf4CST.jpg" alt="Memory 2" />
+    <img src="https://i.imgur.com/XP3tED9.jpg" alt="Memory 3" />
+    <!-- Add more memory images here -->
+  </div>
+
+  <!-- Background music -->
+  <audio id="bgMusic" loop>
     <source src="take-me-to-your-heart.mp3" type="audio/mpeg" />
+    Your browser does not support the audio element.
   </audio>
 
-  <div id="fireworks"></div>
-
   <script>
-    // Show love letter popup
-    function showLoveLetter() {
-      document.getElementById("bgMusic").play();
-      document.getElementById("loveLetterPopup").style.display = 'block';
-      document.getElementById("sadMessage").style.display = 'none';
-    }
-    function hideLoveLetter() {
-      document.getElementById("loveLetterPopup").style.display = 'none';
-      document.getElementById("sadMessage").style.display = 'none';
-    }
+    // Replace this with your deployed Google Apps Script Web App URL
+    const scriptURL = 'YOUR_GOOGLE_APPS_SCRIPT_WEB_APP_URL';
 
-    // Countdown timer to 1-month anniversary (July 7, 2025)
-    const targetDate = new Date("July 7, 2025 00:00:00").getTime();
-    const countdownEl = document.getElementById("countdown");
-    setInterval(() => {
-      const now = new Date().getTime();
-      const distance = targetDate - now;
-      if (distance < 0) {
-        countdownEl.innerHTML = "🎉 Happy 1 Month Anniversary! 🎉";
-        return;
-      }
-      const days = Math.floor(distance / (1000 * 60 * 60 * 24));
-      const hrs = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-      const mins = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-      const secs = Math.floor((distance % (1000 * 60)) / 1000);
-      countdownEl.innerHTML = `⏳ Our 1 Month Anniversary In: ${days}d ${hrs}h ${mins}m ${secs}s`;
-    }, 1000);
+    const yesBtn = document.getElementById('yesBtn');
+    const noBtn = document.getElementById('noBtn');
+    const sadMessage = document.getElementById('sadMessage');
+    const fireworksCanvas = document.getElementById('fireworks');
+    const ctx = fireworksCanvas.getContext('2d');
+    const bgMusic = document.getElementById('bgMusic');
 
-    // Submit reply to Google Sheet
-    function submitForm() {
-      const scriptURL = 'YOUR_GOOGLE_APPS_SCRIPT_WEBAPP_URL';
-      const form = document.forms['replyForm'];
-      const data = new FormData(form);
+    fireworksCanvas.width = window.innerWidth;
+    fireworksCanvas.height = window.innerHeight;
 
-      fetch(scriptURL, { method: 'POST', body: data })
-        .then(() => {
-          document.getElementById("responseMessage").innerText = "Message sent successfully!";
-          form.reset();
-        })
-        .catch(() => {
-          document.getElementById("responseMessage").innerText = "Failed to send. Try again!";
-        });
-
-      return false;
-    }
-
-    // Proposal answer handler
-    function proposalAnswer(answer) {
-      const popup = document.getElementById("loveLetterPopup");
-      const sadMsg = document.getElementById("sadMessage");
-      const fireworks = document.getElementById("fireworks");
-
-      if (answer) {
-        popup.style.display = 'none';
-        sadMsg.style.display = 'none';
-        startFireworks();
-      } else {
-        popup.style.display = 'none';
-        sadMsg.style.display = 'block';
-        stopFireworks();
+    // Play music once user clicks any button (required by most browsers)
+    function playMusic() {
+      if (bgMusic.paused) {
+        bgMusic.play().catch(() => {}); // avoid unhandled promise
       }
     }
 
-    // Fireworks implementation
-    // We'll use simple canvas fireworks for demonstration
-    const fireworksContainer = document.getElementById("fireworks");
+    yesBtn.addEventListener('click', () => {
+      sendResponse('Yes');
+      sadMessage.style.display = 'none';
+      playMusic();
+      startFireworks();
+    });
 
-    function startFireworks() {
-      fireworksContainer.style.display = 'block';
-      createCanvasFireworks();
+    noBtn.addEventListener('click', () => {
+      sendResponse('No');
+      stopFireworks();
+      sadMessage.style.display = 'block';
+      playMusic();
+    });
+
+    function sendResponse(answer) {
+      const data = new URLSearchParams();
+      data.append('name', 'Her');  // Customize or get from user input if you want
+      data.append('message', answer);
+
+      fetch(scriptURL, {
+        method: 'POST',
+        body: data,
+      })
+      .then(response => response.json())
+      .then(data => console.log('Response saved:', data))
+      .catch(error => console.error('Error!', error.message));
     }
 
-    function stopFireworks() {
-      fireworksContainer.style.display = 'none';
-      clearInterval(fireworkInterval);
-      if (canvas) {
-        canvas.remove();
-        canvas = null;
-      }
-    }
-
-    let canvas, ctx, cw, ch;
-    let particles = [];
-    let fireworkInterval;
-
-    function createCanvasFireworks() {
-      if (canvas) return; // already created
-      canvas = document.createElement('canvas');
-      fireworksContainer.appendChild(canvas);
-      ctx = canvas.getContext('2d');
-      cw = canvas.width = window.innerWidth;
-      ch = canvas.height = window.innerHeight;
-
-      window.addEventListener('resize', () => {
-        cw = canvas.width = window.innerWidth;
-        ch = canvas.height = window.innerHeight;
-      });
-
-      fireworkInterval = setInterval(() => {
-        createFirework();
-      }, 400);
-
-      requestAnimationFrame(update);
-    }
-
-    function createFirework() {
-      const x = Math.random() * cw * 0.8 + cw * 0.1;
-      const y = Math.random() * ch * 0.5 + ch * 0.1;
-      const colors = ['#ff4c4c', '#ff69b4', '#ff1493', '#ff85a2', '#ff4081'];
-      for (let i = 0; i < 30; i++) {
-        particles.push(new Particle(x, y, colors[Math.floor(Math.random() * colors.length)]));
-      }
-    }
+    // --- Fireworks animation ---
 
     class Particle {
       constructor(x, y, color) {
@@ -330,44 +268,102 @@
         this.speedX = (Math.random() - 0.5) * 6;
         this.speedY = (Math.random() - 0.5) * 6;
         this.alpha = 1;
-        this.decay = Math.random() * 0.015 + 0.005;
+        this.decay = Math.random() * 0.01 + 0.005;
       }
+
       update() {
         this.x += this.speedX;
         this.y += this.speedY;
         this.alpha -= this.decay;
       }
+
       draw() {
-        if (this.alpha <= 0) return;
         ctx.save();
         ctx.globalAlpha = this.alpha;
         ctx.beginPath();
-        ctx.fillStyle = this.color;
-        ctx.shadowColor = this.color;
-        ctx.shadowBlur = 8;
         ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
+        ctx.fillStyle = this.color;
         ctx.fill();
         ctx.restore();
       }
     }
 
-    function update() {
-      ctx.clearRect(0, 0, cw, ch);
-      particles = particles.filter(p => p.alpha > 0);
-      particles.forEach(p => {
-        p.update();
-        p.draw();
-      });
-      requestAnimationFrame(update);
+    let particles = [];
+    let animationId;
+
+    function randomColor() {
+      const colors = ['#ff4081', '#f50057', '#ff80ab', '#f48fb1', '#e91e63'];
+      return colors[Math.floor(Math.random() * colors.length)];
     }
 
-    // Animated falling roses generation
+    function createFireworks() {
+      for (let i = 0; i < 50; i++) {
+        particles.push(new Particle(
+          Math.random() * fireworksCanvas.width,
+          Math.random() * fireworksCanvas.height * 0.6 + fireworksCanvas.height * 0.2,
+          randomColor()
+        ));
+      }
+    }
+
+    function animate() {
+      ctx.clearRect(0, 0, fireworksCanvas.width, fireworksCanvas.height);
+
+      particles.forEach((p, i) => {
+        p.update();
+        if (p.alpha <= 0) {
+          particles.splice(i, 1);
+        } else {
+          p.draw();
+        }
+      });
+
+      if (particles.length === 0) {
+        cancelAnimationFrame(animationId);
+        fireworksCanvas.style.display = 'none';
+      } else {
+        animationId = requestAnimationFrame(animate);
+      }
+    }
+
+    function startFireworks() {
+      fireworksCanvas.style.display = 'block';
+      createFireworks();
+      animate();
+    }
+
+    function stopFireworks() {
+      particles = [];
+      cancelAnimationFrame(animationId);
+      fireworksCanvas.style.display = 'none';
+    }
+
+    window.addEventListener('resize', () => {
+      fireworksCanvas.width = window.innerWidth;
+      fireworksCanvas.height = window.innerHeight;
+    });
+
+    // --- Slideshow ---
+
+    const slides = document.querySelectorAll('#slideshow img');
+    let currentSlide = 0;
+
+    function showNextSlide() {
+      slides[currentSlide].classList.remove('active');
+      currentSlide = (currentSlide + 1) % slides.length;
+      slides[currentSlide].classList.add('active');
+    }
+
+    setInterval(showNextSlide, 4000);
+
+    // --- Animated roses ---
+
     function createRose() {
       const rose = document.createElement('div');
       rose.className = 'rose';
       rose.style.left = Math.random() * window.innerWidth + 'px';
-      rose.style.animationDuration = (6 + Math.random() * 4) + 's';
-      rose.style.animationDelay = Math.random() * 5 + 's';
+      rose.style.animationDuration = 6 + Math.random() * 4 + 's';
+      rose.style.opacity = 0.8 + Math.random() * 0.2;
       document.body.appendChild(rose);
 
       setTimeout(() => {
@@ -375,10 +371,9 @@
       }, 10000);
     }
 
-    // Create roses continuously
+    // Create roses every 700ms
     setInterval(createRose, 700);
 
   </script>
-
 </body>
 </html>
