--- a/index.html
+++ b/index.html
@@ -196,9 +196,11 @@
   <canvas id="fireworks"></canvas>
 
   <div id="slideshow">
-    <img src="https://i.imgur.com/5bQp4Uf.jpg" class="active" alt="Memory 1" />
-    <img src="https://i.imgur.com/JPf4CST.jpg" alt="Memory 2" />
-    <img src="https://i.imgur.com/XP3tED9.jpg" alt="Memory 3" />
+    <img src="a.jpg" class="active" alt="Memory 1" />
+    <img src="b.jpg" alt="Memory 2" />
+    <img src="c.jpg" alt="Memory 3" />
+    <img src="d.jpg" alt="Memory 4" />
+    <img src="e.jpg" alt="Memory 5" />
     <!-- Add more memory images here -->
   </div>
 
