--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@ button:hover {
 </head>
 <body>
   <div class="hearts-area" id="hearts"></div>  <h1>Will You Be My Girlfriend? 💖</h1>
-  <div class="subtitle">Your smile is the prettiest thing in the world!</div>  <div class="buttons">
+  <div class="subtitle">❣️I will make you happy always❣️</div>  <div class="buttons">
     <button id="yesBtn">Yes 💕</button>
     <button id="noBtn">No 😢</button>
-  </div>  <div id="sadMessage">Oh no... Maybe next time! 💔</div><canvas id="fireworks"></canvas>
+  </div>  <div id="sadMessage">💔Oh No 💔</div><canvas id="fireworks"></canvas>
 
   <div id="slideshow">
     <img src="a.jpg" class="active" alt="Memory 1" />
@@ -145,7 +145,7 @@ button:hover {
     <img src="c.jpg" alt="Memory 3" />
     <img src="d.jpg" alt="Memory 4" />
     <img src="e.jpg" alt="Memory 5" />
-  </div><audio id="yesMusic" src="yes-song.mp3"></audio> <audio id="noMusic" src="no-song.mp3"></audio>
+  </div><audio id="yesMusic" src="yes.mp3"></audio> <audio id="noMusic" src="no.mp3"></audio>
 
   <script>
     const yesBtn = document.getElementById('yesBtn');
