--- a/index.html
+++ b/index.html
@@ -1,143 +1,161 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Will You Be My Girlfriend? ❤️</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');body {
-  margin: 0;
-  font-family: 'Segoe UI', sans-serif;
-  background: linear-gradient(135deg, #f8bbd0, #f48fb1);
-  color: white;
-  text-align: center;
-  height: 100vh;
-  overflow: hidden;
-  padding: 20px;
-  position: relative;
-}
+    @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
-h1 {
-  font-family: 'Pacifico', cursive;
-  font-size: 3.5rem;
-  margin-bottom: 10px;
-  text-shadow: 0 0 10px #f48fb1;
-}
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #f8bbd0, #f48fb1);
+      color: white;
+      text-align: center;
+      height: 100vh;
+      overflow: hidden;
+      padding: 20px;
+      position: relative;
+    }
 
-.subtitle {
-  font-size: 1.8rem;
-  margin-bottom: 20px;
-  font-weight: 600;
-  text-shadow: 0 0 8px #f48fb1;
-}
+    h1 {
+      font-family: 'Pacifico', cursive;
+      font-size: 3.5rem;
+      margin-bottom: 10px;
+      text-shadow: 0 0 10px #f48fb1;
+    }
 
-.buttons {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  gap: 50px;
-  z-index: 5;
-}
+    .subtitle {
+      font-size: 1.8rem;
+      margin-bottom: 20px;
+      font-weight: 600;
+      text-shadow: 0 0 8px #f48fb1;
+    }
 
-button {
-  font-size: 2rem;
-  padding: 15px 50px;
-  border: none;
-  border-radius: 50px;
-  cursor: pointer;
-  color: white;
-  box-shadow: 0 5px 15px rgba(255, 105, 180, 0.6);
-  transition: transform 0.3s ease;
-}
+    .buttons {
+      margin-top: 20px;
+      display: flex;
+      justify-content: center;
+      gap: 50px;
+      z-index: 5;
+    }
 
-button:hover {
-  transform: scale(1.1);
-}
+    button {
+      font-size: 2rem;
+      padding: 15px 50px;
+      border: none;
+      border-radius: 50px;
+      cursor: pointer;
+      color: white;
+      box-shadow: 0 5px 15px rgba(255, 105, 180, 0.6);
+      transition: transform 0.3s ease;
+    }
 
-#yesBtn {
-  background-color: #ff4081;
-}
+    button:hover {
+      transform: scale(1.1);
+    }
 
-#noBtn {
-  background-color: #757575;
-}
+    #yesBtn {
+      background-color: #ff4081;
+    }
 
-#sadMessage {
-  font-size: 2rem;
-  margin-top: 30px;
-  display: none;
-  color: #ffcdd2;
-  font-weight: bold;
-  z-index: 5;
-}
+    #noBtn {
+      background-color: #757575;
+    }
 
-#fireworks {
-  pointer-events: none;
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  z-index: 9999;
-  display: none;
-}
+    #sadMessage {
+      font-size: 2rem;
+      margin-top: 30px;
+      display: none;
+      color: #ffcdd2;
+      font-weight: bold;
+      z-index: 5;
+    }
 
-#slideshow {
-  margin-top: 40px;
-  width: 90vw;
-  max-width: 600px;
-  height: 300px;
-  border-radius: 20px;
-  box-shadow: 0 8px 20px rgba(255, 105, 180, 0.7);
-  overflow: hidden;
-  position: relative;
-  background: #fff0f7;
-  z-index: 5;
-}
+    #fireworks {
+      pointer-events: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 9999;
+      display: none;
+    }
 
-#slideshow img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  transition: opacity 1s ease;
-  border-radius: 20px;
-}
+    #slideshow {
+      margin-top: 40px;
+      width: 90vw;
+      max-width: 600px;
+      height: 300px;
+      border-radius: 20px;
+      box-shadow: 0 8px 20px rgba(255, 105, 180, 0.7);
+      overflow: hidden;
+      position: relative;
+      background: #fff0f7;
+      z-index: 5;
+    }
 
-#slideshow img.active {
-  opacity: 1;
-  position: relative;
-}
+    #slideshow img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      position: absolute;
+      top: 0;
+      left: 0;
+      opacity: 0;
+      transition: opacity 1s ease;
+      border-radius: 20px;
+    }
 
-.hearts-area {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  pointer-events: none;
-  overflow: hidden;
-  z-index: 0;
-}
+    #slideshow img.active {
+      opacity: 1;
+      position: relative;
+    }
 
-.heart {
-  position: absolute;
-  color: #ff69b4;
-  font-size: 60px;
-  animation: floatHearts 6s infinite ease-in-out;
-}
+    .hearts-area {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      overflow: hidden;
+      z-index: 0;
+    }
 
-@keyframes floatHearts {
-  0% { transform: translateY(100vh) scale(0.5); opacity: 0; }
-  50% { opacity: 1; }
-  100% { transform: translateY(-10vh) scale(1); opacity: 0; }
-}
+    .heart {
+      position: absolute;
+      color: #ff69b4;
+      font-size: 60px;
+      animation: floatHearts 6s infinite ease-in-out;
+    }
 
+    @keyframes floatHearts {
+      0% {
+        transform: translateY(100vh) scale(0.5);
+        opacity: 0;
+      }
+      50% {
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(-10vh) scale(1);
+        opacity: 0;
+      }
+    }
   </style>
 </head>
 <body>
-  <div class="hearts-area" id="hearts"></div>  <h1>Will You Be My Girlfriend? 💖</h1>
-  <div class="subtitle">❣️I will make you happy always❣️</div>  <div class="buttons">
+  <div class="hearts-area" id="hearts"></div>
+  <h1>Will You Be My Girlfriend? 💖</h1>
+  <div class="subtitle">❣️I will make you happy always❣️</div>
+  <div class="buttons">
     <button id="yesBtn">Yes 💕</button>
     <button id="noBtn">No 😢</button>
-  </div>  <div id="sadMessage">💔Oh No 💔</div><canvas id="fireworks"></canvas>
+  </div>
+  <div id="sadMessage">💔Oh No 💔</div>
+  <canvas id="fireworks"></canvas>
 
   <div id="slideshow">
     <img src="a.jpg" class="active" alt="Memory 1" />
@@ -145,7 +163,10 @@ button:hover {
     <img src="c.jpg" alt="Memory 3" />
     <img src="d.jpg" alt="Memory 4" />
     <img src="e.jpg" alt="Memory 5" />
-  </div><audio id="yesMusic" src="yes.mp3"></audio> <audio id="noMusic" src="no.mp3"></audio>
+  </div>
+
+  <audio id="yesMusic" src="yes.mp3"></audio>
+  <audio id="noMusic" src="no.mp3"></audio>
 
   <script>
     const yesBtn = document.getElementById('yesBtn');
@@ -167,9 +188,7 @@ button:hover {
     function sendResponse(answer) {
       fetch('https://formspree.io/f/manjqppd', {
         method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
+        headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ message: answer })
       })
       .then(() => console.log('Response sent!'))
@@ -177,20 +196,26 @@ button:hover {
     }
 
     yesBtn.addEventListener('click', () => {
-      sadMessage.style.display = 'none';
+      noMusic.pause();
+      noMusic.currentTime = 0;
+
       yesMusic.play();
+      sadMessage.style.display = 'none';
       startFireworks();
       sendResponse('Yes');
     });
 
     noBtn.addEventListener('click', () => {
-      stopFireworks();
-      sadMessage.style.display = 'block';
+      yesMusic.pause();
+      yesMusic.currentTime = 0;
+
       noMusic.play();
+      sadMessage.style.display = 'block';
+      stopFireworks();
       sendResponse('No');
     });
 
-    // Fireworks Animation
+    // Fireworks animation
     const fireworksCanvas = document.getElementById('fireworks');
     const ctx = fireworksCanvas.getContext('2d');
     fireworksCanvas.width = window.innerWidth;
@@ -207,11 +232,13 @@ button:hover {
         this.alpha = 1;
         this.decay = Math.random() * 0.01 + 0.005;
       }
+
       update() {
         this.x += this.speedX;
         this.y += this.speedY;
         this.alpha -= this.decay;
       }
+
       draw() {
         ctx.save();
         ctx.globalAlpha = this.alpha;
@@ -280,11 +307,9 @@ button:hover {
       heart.style.fontSize = (Math.random() * 30 + 40) + 'px';
       heart.style.animationDuration = (Math.random() * 3 + 4) + 's';
       document.getElementById('hearts').appendChild(heart);
-
-      setTimeout(() => {
-        heart.remove();
-      }, 7000);
+      setTimeout(() => heart.remove(), 7000);
     }
     setInterval(createHeart, 500);
-  </script></body>
+  </script>
+</body>
 </html>
