--- a/index.html
+++ b/index.html
@@ -1,153 +1,167 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Will You Be My Girlfriend? ❤️</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
+      height: 100%;
       font-family: 'Segoe UI', sans-serif;
       background: linear-gradient(135deg, #f8bbd0, #f48fb1);
       color: white;
-      text-align: center;
-      height: 100vh;
       overflow: hidden;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      text-align: center;
       padding: 20px;
+      z-index: 5;
       position: relative;
-    }h1 {
-  font-family: 'Pacifico', cursive;
-  font-size: 3.5rem;
-  margin-bottom: 10px;
-  text-shadow: 0 0 10px #f48fb1;
-}
+    }
 
-.subtitle {
-  font-size: 1.8rem;
-  margin-bottom: 20px;
-  font-weight: 600;
-  text-shadow: 0 0 8px #f48fb1;
-}
+    h1 {
+      font-family: 'Pacifico', cursive;
+      font-size: 3.5rem;
+      margin-bottom: 10px;
+      text-shadow: 0 0 10px #f48fb1;
+    }
 
-.buttons {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  gap: 50px;
-  z-index: 5;
-}
+    .subtitle {
+      font-size: 1.8rem;
+      margin-bottom: 20px;
+      font-weight: 600;
+      text-shadow: 0 0 8px #f48fb1;
+    }
 
-button {
-  font-size: 2rem;
-  padding: 15px 50px;
-  border: none;
-  border-radius: 50px;
-  cursor: pointer;
-  color: white;
-  box-shadow: 0 5px 15px rgba(255, 105, 180, 0.6);
-  transition: transform 0.3s ease;
-}
+    .buttons {
+      display: flex;
+      justify-content: center;
+      gap: 50px;
+      margin-bottom: 20px;
+    }
 
-button:hover {
-  transform: scale(1.1);
-}
+    button {
+      font-size: 2rem;
+      padding: 15px 50px;
+      border: none;
+      border-radius: 50px;
+      cursor: pointer;
+      color: white;
+      box-shadow: 0 5px 15px rgba(255, 105, 180, 0.6);
+      transition: transform 0.3s ease;
+    }
 
-#yesBtn {
-  background-color: #ff4081;
-}
+    button:hover {
+      transform: scale(1.1);
+    }
 
-#noBtn {
-  background-color: #757575;
-}
+    #yesBtn {
+      background-color: #ff4081;
+    }
 
-#sadMessage {
-  font-size: 2rem;
-  margin-top: 30px;
-  display: none;
-  color: #ffcdd2;
-  font-weight: bold;
-  z-index: 5;
-}
+    #noBtn {
+      background-color: #757575;
+    }
 
-#fireworks {
-  pointer-events: none;
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  z-index: 9999;
-  display: none;
-}
+    #sadMessage {
+      font-size: 2rem;
+      margin-top: 20px;
+      display: none;
+      color: #ffcdd2;
+      font-weight: bold;
+    }
 
-#slideshow {
-  margin-top: 40px;
-  width: 90vw;
-  max-width: 600px;
-  height: 300px;
-  border-radius: 20px;
-  box-shadow: 0 8px 20px rgba(255, 105, 180, 0.7);
-  overflow: hidden;
-  position: relative;
-  background: #fff0f7;
-  z-index: 5;
-}
+    #slideshow {
+      width: 90vw;
+      max-width: 600px;
+      height: 300px;
+      border-radius: 20px;
+      box-shadow: 0 8px 20px rgba(255, 105, 180, 0.7);
+      overflow: hidden;
+      position: relative;
+      background: #fff0f7;
+      margin-top: 30px;
+    }
 
-#slideshow img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  transition: opacity 1s ease;
-  border-radius: 20px;
-}
+    #slideshow img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      position: absolute;
+      top: 0;
+      left: 0;
+      opacity: 0;
+      transition: opacity 1s ease;
+      border-radius: 20px;
+    }
 
-#slideshow img.active {
-  opacity: 1;
-  position: relative;
-}
+    #slideshow img.active {
+      opacity: 1;
+      position: relative;
+    }
 
-.emoji-shower {
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  pointer-events: none;
-  z-index: 10000;
-}
+    #fireworks {
+      pointer-events: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      z-index: 9999;
+      display: none;
+    }
 
-.emoji {
-  position: absolute;
-  font-size: 40px;
-  animation: fall 4s linear forwards;
-}
+    .emoji-shower {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      pointer-events: none;
+      z-index: 10000;
+    }
 
-@keyframes fall {
-  0% { transform: translateY(-10%); opacity: 0; }
-  50% { opacity: 1; }
-  100% { transform: translateY(110vh); opacity: 0; }
-}
+    .emoji {
+      position: absolute;
+      font-size: 40px;
+      animation: fall 4s linear forwards;
+    }
 
+    @keyframes fall {
+      0% { transform: translateY(-10%); opacity: 0; }
+      50% { opacity: 1; }
+      100% { transform: translateY(110vh); opacity: 0; }
+    }
   </style>
 </head>
 <body>
-  <h1>Will You Be My Girlfriend? 💖</h1>
-  <div class="subtitle">❣️I will make you happy always❣️</div>
-  <div class="buttons">
-    <button id="yesBtn">Yes 💕</button>
-    <button id="noBtn">No 😢</button>
+  <div class="container">
+    <h1>Will You Be My Girlfriend? 💖</h1>
+    <div class="subtitle">❣️I will make you happy always❣️</div>
+    <div class="buttons">
+      <button id="yesBtn">Yes 💕</button>
+      <button id="noBtn">No 😢</button>
+    </div>
+    <div id="sadMessage">💔Oh No 💔</div>
+    <div id="slideshow">
+      <img src="a.jpg" class="active" alt="Memory 1" />
+      <img src="b.jpg" alt="Memory 2" />
+      <img src="c.jpg" alt="Memory 3" />
+      <img src="d.jpg" alt="Memory 4" />
+      <img src="e.jpg" alt="Memory 5" />
+    </div>
   </div>
-  <div id="sadMessage">💔Oh No 💔</div>
+
   <canvas id="fireworks"></canvas>
-  <div id="slideshow">
-    <img src="a.jpg" class="active" alt="Memory 1" />
-    <img src="b.jpg" alt="Memory 2" />
-    <img src="c.jpg" alt="Memory 3" />
-    <img src="d.jpg" alt="Memory 4" />
-    <img src="e.jpg" alt="Memory 5" />
-  </div>
+  <div class="emoji-shower" id="emojiShower"></div>
   <audio id="yesMusic" src="yes.mp3"></audio>
   <audio id="noMusic" src="no.mp3"></audio>
-  <div class="emoji-shower" id="emojiShower"></div>  <script>
+
+  <script>
     const yesBtn = document.getElementById('yesBtn');
     const noBtn = document.getElementById('noBtn');
     const sadMessage = document.getElementById('sadMessage');
@@ -203,7 +217,7 @@ button:hover {
       sendResponse('No');
     });
 
-    // Fireworks logic (can be skipped if not needed)
+    // Fireworks
     const fireworksCanvas = document.getElementById('fireworks');
     const ctx = fireworksCanvas.getContext('2d');
     fireworksCanvas.width = window.innerWidth;
@@ -280,5 +294,6 @@ button:hover {
       cancelAnimationFrame(animationId);
       fireworksCanvas.style.display = 'none';
     }
-  </script></body>
+  </script>
+</body>
 </html>
