--- a/index.html
+++ b/index.html
@@ -12,24 +12,49 @@
       height: 100%;
       background: linear-gradient(135deg, #f8bbd0, #f48fb1);
       font-family: 'Segoe UI', sans-serif;
-      color: white;
-      text-align: center;
       overflow: hidden;
     }
 
-    body {
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    body::before {
+      content: '❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️❣️';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: 40px solid transparent;
+      pointer-events: none;
+      background: repeating-linear-gradient(to right, transparent 0 40px), repeating-linear-gradient(to right, transparent 0 40px),
+                  repeating-linear-gradient(to bottom, transparent 0 40px), repeating-linear-gradient(to bottom, transparent 0 40px);
+      background-repeat: repeat;
+      background-size: 40px 40px;
+      box-sizing: border-box;
+      z-index: 999;
+    }
+
+    body::after {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      border: 20px solid #f48fb1;
+      pointer-events: none;
+      box-sizing: border-box;
+      z-index: 998;
     }
 
     .container {
+      position: relative;
+      z-index: 5;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      max-width: 100%;
-      padding: 20px;
+      padding: 30px;
+      text-align: center;
+      color: white;
     }
 
     h1 {
@@ -51,7 +76,6 @@
       display: flex;
       justify-content: center;
       gap: 50px;
-      z-index: 5;
     }
 
     button {
@@ -189,28 +213,13 @@
     const yesMusic = document.getElementById('yesMusic');
     const noMusic = document.getElementById('noMusic');
     const emojiShower = document.getElementById('emojiShower');
-
-    const slideshowImages = document.querySelectorAll('#slideshow img');
-    let currentSlide = 0;
-    setInterval(() => {
-      slideshowImages[currentSlide].classList.remove('active');
-      currentSlide = (currentSlide + 1) % slideshowImages.length;
-      slideshowImages[currentSlide].classList.add('active');
-    }, 4000);
-
-    function sendResponse(answer) {
-      fetch('https://formspree.io/f/manjqppd', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ message: answer })
-      });
-    }
+    let burstInterval;
 
     function showEmojiShower(emoji) {
       const burstCenterX = window.innerWidth / 2;
       const burstCenterY = window.innerHeight / 2;
 
-      for (let i = 0; i < 50; i++) {
+      for (let i = 0; i < 40; i++) {
         const span = document.createElement('span');
         span.className = 'emoji';
         span.innerText = emoji;
@@ -233,25 +242,47 @@
       }
     }
 
+    function startEmojiBurstLoop() {
+      stopEmojiBurstLoop(); // clear if already running
+      burstInterval = setInterval(() => {
+        showEmojiShower('💐');
+        showEmojiShower('💖');
+      }, 500);
+    }
+
+    function stopEmojiBurstLoop() {
+      clearInterval(burstInterval);
+    }
+
     yesBtn.addEventListener('click', () => {
       sadMessage.style.display = 'none';
       noMusic.pause(); noMusic.currentTime = 0;
       yesMusic.play();
       startFireworks();
-      showEmojiShower('💐');
-      showEmojiShower('💖');
-      sendResponse('Yes');
+      startEmojiBurstLoop();
     });
 
     noBtn.addEventListener('click', () => {
-      stopFireworks();
       sadMessage.style.display = 'block';
       yesMusic.pause(); yesMusic.currentTime = 0;
       noMusic.play();
-      showEmojiShower('😢');
       showEmojiShower('😭');
-      sendResponse('No');
+      showEmojiShower('😢');
+      stopFireworks();
+      stopEmojiBurstLoop();
     });
+
+    yesMusic.onended = () => {
+      stopEmojiBurstLoop();
+    };
+
+    const slideshowImages = document.querySelectorAll('#slideshow img');
+    let currentSlide = 0;
+    setInterval(() => {
+      slideshowImages[currentSlide].classList.remove('active');
+      currentSlide = (currentSlide + 1) % slideshowImages.length;
+      slideshowImages[currentSlide].classList.add('active');
+    }, 4000);
 
     const fireworksCanvas = document.getElementById('fireworks');
     const ctx = fireworksCanvas.getContext('2d');
